--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/styles2.css">
     <title> Student Page</title>
 </head>
 <body>
