--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                       <h2>VISUAL COMMUNICATION DESIGN</h2>
                       <h3>A major in Visual Communication Design educates and prepares students to conceive and produce creative solutions to satisfy the visual communication needs of society.</h3>
                       <h2>READ MORE...</h2>
+                      <a class="student-detail" href="index2.html">Student Detail</a>
                     </div>
                   
             <!-- Right-->    
